# outris-identity-mcp

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_STATUS_JAN27.md  DOCKER_FIX_VERIFICATION.md  Dockerfile  LICENSE  README.md  SETUP.md  TOOLS.md  check_apikey.py  check_credits.py  find_permission.py  init_oauth_clients.py  init_oauth_db.py  mcp.json  mcp_oauth_schema.sql  pyproject.toml  requirements.txt  server.json  test_anthropic.py  test_hr_live_permission.py  test_masking.py  test_masking_unit.py
docs/: ARCHITECTURE.md  CREDIT_SYSTEM.md
examples/: claude_config.json
mcp_server/: __main__.py  mcp_server.py  server_sse.py  server_streamable.py
mcp_server/core/: auth.py  config.py  context.py  credits.py  database.py
mcp_server/models/: responses.py
mcp_server/routes/: __init__.py  admin_routes.py  chat_routes.py  oauth_routes.py  public_routes.py  user_routes.py
mcp_server/tools/: breach.py  commerce.py  helpers.py  investigation.py  kyc.py  platforms.py  registry.py  traceflow.py  whatsapp.py
