[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outris-identity-mcp"
version = "2.0.0"
description = "MCP server for Outris Identity Platform with investigation, commerce, and KYC tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Outris Technologies", email = "dev@outris.com"}
]
keywords = ["mcp", "identity", "investigation", "kyc", "commerce"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/outris-ai/outris-identity-mcp"
Documentation = "https://github.com/outris-ai/outris-identity-mcp"
Repository = "https://github.com/outris-ai/outris-identity-mcp.git"
Issues = "https://github.com/outris-ai/outris-identity-mcp/issues"

[tool.setuptools]
packages = ["mcp_server"]

[tool.setuptools.package-data]
mcp_server = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
